--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,8 +14,10 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
         <activity
-            android:name="com.injoee.ui.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.injoee.ui.StartPageActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar"
+             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,6 +31,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.injoee.ui.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.injoee.ui.MainActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
