--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,21 +5,52 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="6"
+        android:minSdkVersion="9"
         android:targetSdkVersion="19" />
+
+    <!-- Allows access to the Download Manager -->
+    <permission
+        android:name="com.injoee.permission.ACCESS_DOWNLOAD_MANAGER"
+        android:description="@string/permdesc_downloadManager"
+        android:label="@string/permlab_downloadManager"
+        android:protectionLevel="normal" />
+
+    <!-- Allows advanced access to the Download Manager -->
+    <permission
+        android:name="com.injoee.permission.ACCESS_DOWNLOAD_MANAGER_ADVANCED"
+        android:description="@string/permdesc_downloadManagerAdvanced"
+        android:label="@string/permlab_downloadManagerAdvanced"
+        android:protectionLevel="normal" />
+
+    <!-- Allows to send broadcasts on download completion -->
+    <permission
+        android:name="com.injoee.permission.SEND_DOWNLOAD_COMPLETED_INTENTS"
+        android:description="@string/permdesc_downloadCompletedIntent"
+        android:label="@string/permlab_downloadCompletedIntent"
+        android:protectionLevel="normal" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.injoee.permission.ACCESS_DOWNLOAD_MANAGER" />
+    <uses-permission android:name="com.injoee.permission.ACCESS_DOWNLOAD_MANAGER_ADVANCED" />
+    <uses-permission android:name="com.injoee.permission.SEND_DOWNLOAD_COMPLETED_INTENTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/CustomActionBarTheme" >
+        android:label="@string/app_name" >
         <activity
             android:name="com.injoee.ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+				<!-- 
                 <category android:name="android.intent.category.LAUNCHER" />
+             	-->
             </intent-filter>
         </activity>
         <activity
@@ -30,15 +61,33 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.injoee.ui.MainActivity" />
         </activity>
-    </application>
+        
+        <activity
+            android:name=".DownloadProviderActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" >
-    </uses-permission>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.mozillaonline.providers.downloads.ui.DownloadList" >
+        </activity>
+
+        <provider
+            android:name="com.injoee.providers.downloads.DownloadProvider"
+            android:authorities="com.injoee.downloads" />
+
+        <service android:name="com.injoee.providers.downloads.DownloadService" />
+
+        <receiver
+            android:name="com.injoee.providers.downloads.DownloadReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+    </application>
 
 </manifest>
