--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,56 +35,62 @@
     <uses-permission android:name="com.injoee.permission.SEND_DOWNLOAD_COMPLETED_INTENTS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.REORDER_TASKS" />
 
     <application
+        android:name="com.injoee.ui.InjoeeApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/CustomActionBarTheme" >
         <activity
             android:name="com.injoee.ui.StartPageActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"
-             >
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.injoee.ui.GameDetail"
-            android:label="@string/title_activity_game_detail"
             android:exported="true"
+            android:label="@string/title_activity_game_detail"
             android:parentActivityName="com.injoee.ui.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.injoee.ui.MainActivity" />
         </activity>
-        
         <activity
             android:name=".DownloadProviderActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-<!-- 
-                <category android:name="android.intent.category.LAUNCHER" />
-             	-->
+                <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             </intent-filter>
         </activity>
-        
         <activity android:name="com.mozillaonline.providers.downloads.ui.DownloadList" >
-        
         </activity>
+
         <provider
             android:name="com.injoee.providers.downloads.DownloadProvider"
             android:authorities="com.injoee.downloads" />
-        
         <provider
             android:name="com.injoee.util.FeaturedGamesListProvider"
-            android:authorities="com.injoee.provider.FeaturedGames"/>
-        
+            android:authorities="com.injoee.provider.FeaturedGames" />
+        <provider 
+            android:name="com.injoee.util.GameDetailProvider"
+            android:authorities="com.injoee.provider.GamesDetail"
+            />
+
         <service android:name="com.injoee.providers.downloads.DownloadService" />
 
         <receiver
@@ -95,23 +101,20 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
-        
-        <activity
-            android:name="com.injoee.providers.downloads.SizeLimitActivity" />
-        
+
+        <activity android:name="com.injoee.providers.downloads.SizeLimitActivity" />
         <activity
             android:name="com.injoee.ui.MainActivity"
             android:label="@string/app_name" >
         </activity>
-        
+
         <!-- activity import from AppFlood -->
         <activity
             android:name="com.appflood.mraid.MraidBrowserActivity"
             android:configChanges="keyboardHidden"
             android:launchMode="singleTask"
-            android:theme="@android:style/Theme.Translucent" >    
+            android:theme="@android:style/Theme.Translucent" >
         </activity>
-        
         <activity
             android:name="com.appflood.AFPanelActivity"
             android:configChanges="keyboardHidden"
@@ -121,10 +124,9 @@
         <activity
             android:name="com.appflood.AFFullScreenActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:theme="@android:style/Theme.Translucent"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.Translucent" >
         </activity>
-        
         <activity
             android:name="com.appflood.AFListActivity"
             android:configChanges="keyboardHidden|orientation"
@@ -132,7 +134,7 @@
             android:theme="@android:style/Theme.Translucent" >
             <intent-filter>
                 <action android:name="" />
-                </intent-filter>
+            </intent-filter>
         </activity>
         <activity
             android:name="com.appflood.AFInterstitialActivity"
@@ -141,13 +143,95 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent" >
         </activity>
+
+        <!-- umeng function import -->
+        <activity
+            android:name="com.umeng.fb.ConversationActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="com.umeng.fb.ContactActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+
+        <service
+            android:name="com.umeng.common.net.DownloadingService"
+            android:process=":DownloadingService" >
+        </service>
+
+        <activity
+            android:name="com.umeng.update.UpdateDialogActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+
+        <receiver
+            android:name="com.umeng.message.NotificationProxyBroadcastReceiver"
+            android:exported="false" >
+        </receiver>
+        <receiver android:name="com.umeng.message.RegistrationReceiver" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="com.umeng.message.UmengBroadcastReceiver" >
+            <intent-filter>
+                <action android:name="org.agoo.android.intent.action.RECEIVE" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.injoee.intent.action.COMMAND" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="org.agoo.android.intent.action.RE_ELECTION_V2" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name="com.umeng.message.UmengService"
+            android:exported="true"
+            android:process=":umengService_v1" >
+            <intent-filter>
+                <action android:name="com.injoee.intent.action.START" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.injoee.intent.action.COCKROACH" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="org.agoo.android.intent.action.PING" />
+            </intent-filter>
+        </service>
+        <service
+            android:name="org.android.agoo.service.ElectionService"
+            android:exported="true"
+            android:process=":umengService_v1" >
+            <intent-filter>
+                <action android:name="org.agoo.android.intent.action.ELECTION_V2" />
+            </intent-filter>
+        </service>
+        <service android:name="com.umeng.message.UmengIntentService" />
+
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="52dce92656240b6e511d074d" >
+        </meta-data>
+        <meta-data
+            android:name="UMENG_MESSAGE_SECRET"
+            android:value="fe2d4ed22c6bf682368dd7aaf7705d97" >
+        </meta-data>
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="1" />
+
+        <!-- Appflood ad added -->
         <receiver
             android:name="com.appflood.AFReferralReceiver"
             android:exported="true" >
             <intent-filter>
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
-                </intent-filter>
-         </receiver>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
