--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-19
 android.library=false
-android.library.reference.1=D:/Workspace/android-support-v7-appcompat
+android.library.reference.1=../../../WorkSpace/sdk/extras/android/support/v7/appcompat
